--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,35 @@
-body {
-  background-color: red;
-  font-size: 1rem;
-}
+/**************BASICS**************/
 
-p {
-  color: blue;
-  border: 1px solid gray;
-  font-family: "Courier New", Courier, monospace;
-  text-align: center;
-  color: red;
-}
 
-.header {
-  height: 200px;
-}
+/**************SHARED**************/
 
-.footer {
-  height: 300px;
-}/*# sourceMappingURL=style.css.map */
+
+/**************HEADER**************/
+
+
+/**************nav**************/
+
+
+/**************hero**************/
+
+
+/**************MAIN**************/
+
+/**************about-us**************/
+
+/**************what-we-do**************/
+
+
+/**************our-trips**************/
+
+
+/**************contacts**************/
+
+
+/**************reviews**************/
+
+
+/**************gallery**************/
+
+
+/**************FOOTER**************/
