--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 999;
 }
 
 .nav-container {
@@ -80,7 +81,44 @@ body {
 }
 
 /**************hero**************/
+.hero {
+    width: 100vw;
+    height: 804px;
+    position: relative;
+}
 
+.hero-image {
+    background-image: url(/files/images/scott-goodwill-y8Ngwq34_Ak-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    width: 100%;
+    height: 100%;
+}
+
+.hero-text-container {
+    width: 60%;
+
+    position: absolute;
+    bottom: 20%;
+    left: 30%;
+}
+
+.hero-text {   
+    font-size: 64px;
+    color: white;
+    line-height: 5rem;
+    letter-spacing: -0.9px;
+
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.hero-text span {
+    flex-basis: calc(100% / 1);
+    text-align: end;
+}
 
 /**************MAIN**************/
 
