--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
 }
 
 
+
+
+
 /**************SHARED**************/
 .capitalize {
     text-transform: capitalize;
@@ -32,7 +35,14 @@ body {
     border-radius: 5px;
 }
 
+
+
+
+
 /**************HEADER**************/
+
+
+
 
 
 /**************nav**************/
@@ -80,6 +90,10 @@ body {
     list-style: none;
 }
 
+
+
+
+
 /**************hero**************/
 .hero {
     width: 100vw;
@@ -120,9 +134,66 @@ body {
     text-align: end;
 }
 
+
+
+
+
 /**************MAIN**************/
 
 /**************about-us**************/
+.about-us {
+    width: 70vw;
+    height: 310px;
+    margin: 10vh auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-us-text {
+    flex-basis: calc(100% / 2 - 2%);
+}
+
+.about-us-text p {
+    font-size: 17px;
+    margin-top: 5%;
+}
+
+        @media (max-width: 1260px) {
+            .about-us-text p {
+                font-size: 16px;
+                margin-top: 3%;
+            }
+        }
+
+        @media (max-width: 1050px) {
+            .about-us-text p {
+                font-size: 14px;
+            }
+        }
+
+        @media (max-width: 810px) {
+            .about-us-text p {
+                font-size: 13px;
+            }
+        }
+
+.about-us-img-container {
+    flex-basis: calc(100% / 2);
+}
+
+.about-us-img {
+    background-image: url(/files/images/anneliese-phillips-uv4-vl3liKM-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
 
 /**************what-we-do**************/
 
