--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
     --color-pink-darker: #e9877b;
 }
 
-body {
+.body {
     font-family: Roboto, sans-serif;
     border-radius: 5px;
 }
@@ -78,6 +78,7 @@ body {
     flex-grow: 1;
 
     border-radius: 15px;
+    padding: 3px 0;
 }
 
 .nav-container a:hover {
@@ -196,7 +197,90 @@ body {
 
 
 /**************what-we-do**************/
+.what-we-do {
+    width: 100vw;
+    height: 591px;
 
+    background-color: var(--color-brown-dark);
+}
+
+.what-we-do-container {
+    width: 70%;
+    height: 50vh;
+    margin: 10vh auto;
+
+    color: var(--color-white);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.what-we-do-text {
+    flex-basis: calc(100% / 3);
+}
+
+.what-we-do-text h2 {
+    text-align: center;
+}
+
+.what-we-do-text p {
+    font-size: 14px;
+    margin-top: 3%;
+}
+
+.what-we-do-icons {
+    flex-basis: calc(100% / 3);
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.what-we-do-icon-container {
+    flex-basis: calc(100% / 7);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+@media (max-width: 870px) {
+    .what-we-do-icon-container {
+        flex-basis: calc(100% / 6)
+    }
+}
+
+.what-we-do-icon1 {
+    background-image: url(/files/icons/hiking-white.png);
+}
+
+.what-we-do-icon2 {
+    background-image: url(/files/icons/cycle-white.png);
+}
+
+.what-we-do-icon3 {
+    background-image: url(/files/icons/water-white.png);
+}
+
+.what-we-do-icon4 {
+    background-image: url(/files/icons/car-white.png);
+}
+
+.what-we-do-icon1,
+.what-we-do-icon2,
+.what-we-do-icon3,
+.what-we-do-icon4 {
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+
+    width: 100%;
+    height: 100%;
+}
+
+.what-we-do-icons h3 {
+    text-align: center;
+}
 
 /**************our-trips**************/
 
