--- a/css/style.css
+++ b/css/style.css
@@ -79,35 +79,35 @@
     display: none;
 }
 
-@media (max-width: 768px) {
-    .nav-burger-container {
-        display: block;
-    }
+        @media (max-width: 768px) {
+            .nav-burger-container {
+                display: block;
+            }
 
-    .nav-burger-container a:hover {
-        transform: scale(1.1);
-        translate: 1.25;
-    }
+            .nav-burger-container a:hover {
+                transform: scale(1.1);
+                translate: 1.25;
+            }
 
-    .burger-menu {
-        width: 50px;
-        height: 50px;
+            .burger-menu {
+                width: 50px;
+                height: 50px;
 
-        position: absolute;
-        top: 10%;
-        right: 0%;
-    }
+                position: absolute;
+                top: 10%;
+                right: 0%;
+            }
 
-    .burger-menu-img {
-        background-image: url(/files/icons/pngegg.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+            .burger-menu-img {
+                background-image: url(/files/icons/pngegg.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
 
-        width: 100%;
-        height: 100%;
-    }
-}
+                width: 100%;
+                height: 100%;
+            }
+        }
 
 .nav-container a {
     text-decoration: none;
@@ -162,6 +162,12 @@
     left: 25%;
 }
 
+        @media (max-width: 768px) {
+            .hero-text-container {
+                width: 65%;
+            }
+        }
+
 .hero-text {   
     font-size: 64px;
     color: white;
@@ -198,6 +204,14 @@
     justify-content: space-between;
 }
 
+        @media (max-width: 768px) {
+            .about-us {
+                width: 80vw;
+                height: 70vh;
+                flex-direction: column;
+            }
+        }
+
 .about-us-text {
     flex-basis: calc(100% / 2 - 2%);
 }
@@ -207,24 +221,38 @@
     margin-top: 5%;
 }
 
-        @media (max-width: 1260px) {
+        @media (max-width: 1365px) {
             .about-us-text p {
                 font-size: 16px;
                 margin-top: 3%;
             }
         }
 
-        @media (max-width: 1050px) {
+        @media (max-width: 1110px) {
+            .about-us-text p {
+                font-size: 15px;
+            }
+        }
+
+        @media (max-width: 980px) {
             .about-us-text p {
                 font-size: 14px;
             }
         }
 
-        @media (max-width: 810px) {
+        @media (max-width: 870px) {
             .about-us-text p {
                 font-size: 13px;
             }
         }
+
+        @media (max-width: 768px) {
+            .about-us-text p {
+                font-size: 16px;
+                margin: 5% 0;
+            }
+        }
+    
 
 .about-us-img-container {
     flex-basis: calc(100% / 2);
@@ -284,6 +312,10 @@
     justify-content: space-between;
 }
 
+.what-we-do-icons h3 {
+    text-align: center;
+}
+
 .what-we-do-icon-container {
     flex-basis: calc(100% / 7);
 
@@ -292,11 +324,11 @@
     justify-content: space-between;
 }
 
-@media (max-width: 870px) {
-    .what-we-do-icon-container {
-        flex-basis: calc(100% / 6)
-    }
-}
+        @media (max-width: 870px) {
+            .what-we-do-icon-container {
+                flex-basis: calc(100% / 6)
+            }
+        }
 
 .what-we-do-icon1 {
     background-image: url(/files/icons/hiking-white.png);
@@ -324,10 +356,6 @@
 
     width: 100%;
     height: 100%;
-}
-
-.what-we-do-icons h3 {
-    text-align: center;
 }
 
 
