--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@
 
             .nav-burger-container a:hover {
                 transform: scale(1.1);
-                translate: 1.25;
+                transition: 0.7s;
             }
 
             .burger-menu {
@@ -127,7 +127,7 @@
 .nav-container a:hover {
     background-color: var(--color-brown-lighter);
     transform: scale(1.1);
-    translate: 1.5;
+    transition: 0.7s;
 }
 
 .nav-container li {
@@ -326,8 +326,20 @@
                 }
             } 
 
+            @media (min-width: 1000px) {
+                .what-we-do-text h2 {
+                    font-size: 26px;
+                }
+            }
+
+            @media (min-width: 1600px) {
+                .what-we-do-text h2 {
+                    font-size: 36px;
+                }
+            }
+
 .what-we-do-text p {
-    font-size: 14px;
+    font-size: 15px;
     margin-top: 3%;
 }
 
@@ -335,6 +347,18 @@
                 .what-we-do-text p {
                     margin: 3% 0;
                     font-size: 18px;
+                }
+            }
+
+            @media (min-width: 1000px) {
+                .what-we-do-text p {
+                    font-size: 17px;
+                }
+            }
+
+            @media (min-width: 1600px) {
+                .what-we-do-text p {
+                    font-size: 20px;
                 }
             }
 
@@ -388,7 +412,7 @@
 
 .what-we-do-icon-container:hover {
     transform: scale(1.1);
-    translate: 1.25;
+    transition: 0.7s;
 }
 
 .what-we-do-icon1 {
@@ -448,19 +472,36 @@
 
     height: 18vh;
 }
-
-            @media (min-width: 1500px) {
-                .our-trips-container {
-                    height: 20vh;
-                }
-            }
-
+            
             @media (max-width: 768px) {
                 .our-trips-container {
                     flex-basis: calc(100% / 1);
                     height: 30vh;
                 }
             }
+            
+            @media (min-width: 1500px) {
+                .our-trips-container {
+                    height: 20vh;
+                }
+            }
+
+            @media (min-width: 1700px) {
+                .our-trips-container {
+                    height: 23vh;
+                }
+            }
+
+            @media (min-width: 1900px) {
+                .our-trips-container {
+                    height: 25vh;
+                }
+            }
+
+.our-trips-container:hover {
+    transform: scale(1.3);
+    transition: 1.2s;
+} 
 
 .our-trips-h2 {
     background-color: var(--color-white-darker);
@@ -476,6 +517,11 @@
                 font-size: 25px;
             }
         }
+
+.our-trips-h2:hover {
+    transform: scale(1);
+    transition: 0s;
+}
 
 .our-trips-img1 {
     background-image: url(/files/images/simon-english-48nerZQCHgo-unsplash.jpg);
@@ -619,6 +665,12 @@
     font-size: 16px;
 }
 
+            @media (min-width: 1400px) {
+                .contacts-paragraphs {
+                    font-size: 18px;
+                }
+            }
+
 .contacts-paragraphs p:nth-child(2) {
     margin-top: 1rem;
 }
@@ -645,7 +697,7 @@
 .contacts-button:hover {
     background-color: var(--color-white-darker);
     transform: scale(1.1);
-    translate: 1.25;
+    transition: 0.7s;
 }
 
 
@@ -666,17 +718,48 @@
     text-align: center;
 }
 
-.review-intro-container {
-    
-}
+            @media (max-width: 768px) {
+                .reviews {
+                    width: 80vw;
+                    height: auto;
+                }
+            }
 
 .review-intro {
-    width: 300px;
+    width: 25vw;
 }
+
+            @media (max-width: 768px) {
+                .review-intro {
+                    width: auto;
+                }
+            }
 
 .review-intro h2 {
     margin-bottom: 2vh;
 }
+
+            @media (min-width: 1300px) {
+                .review-intro h2 {
+                    font-size: 30px;
+                }
+            }
+
+.review-intro p {
+    font-size: 14px;
+}
+
+            @media (max-width: 768px) {
+                .review-intro p {
+                    font-size: 16px;
+                }
+            }
+
+            @media (min-width: 1300px) {
+                .review-intro p {
+                    font-size: 16px;
+                }
+            }
 
 .reviews-itself {
     display: flex;
@@ -684,23 +767,30 @@
     gap: 6vw;
 }
 
+            @media (max-width: 768px) {
+                .reviews-itself {
+                    flex-wrap: wrap;
+                }
+            }
+
 .review1,
 .review2 {
     font-size: 14px;
 }
 
-.review1 h3,
-.review2 h3 {
-    margin-top: 2vh;
-}
+            @media (max-width: 768px) {
+                .review1,
+                .review2 {
+                    font-size: 16px;
+                }
+            }
 
-.review-img-container {
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-
-    border-radius: 50%;
-}
+            @media (min-width: 1300px) {
+                .review1,
+                .review2 {
+                    font-size: 16px;
+                }
+            }
 
 .review1-img {
     background-image: url(/files/images/kalen-emsley-kGSapVfg8Kw-unsplash.jpg);
@@ -708,7 +798,49 @@
 
 .review2-img {
     background-image: url(/files/images/jeffrey-keenan-pUhxoSapPFA-unsplash.jpg);
+    
 }
+
+.review1-img,
+.review2-img {
+    width: 100%;
+    height: 100%;
+
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+}
+
+.review-img-container {
+    width: 100px;
+    height: 100px;
+
+    position: relative;
+    left: calc(50% - 50px);
+    top: 0%;
+    margin-bottom: 30px;
+}
+
+            @media (min-width: 1300px) {
+                .review-img-container {
+                    width: 125px;
+                    height: 125px;
+                    left: calc(50% - 62.5px);
+                }
+            }
+
+.review1 h3,
+.review2 h3 {
+    margin-top: 2vh;
+}
+
+            @media (min-width: 1300px) {
+                .review1 h3,
+                .review2 h3 {
+                    font-size: 22px;
+                }
+            }
 
 
 
