--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid red;
 }
 
 
@@ -11,12 +10,8 @@
 
 
 /**************SHARED**************/
-.capitalize {
-    text-transform: capitalize;
-}
-
-.uppercase {
-    text-transform: uppercase;
+#body {
+    font-family: Roboto, sans-serif;
 }
 
 * {
@@ -31,23 +26,23 @@
     --color-black: black;
 }
 
-.body {
-    font-family: Roboto, sans-serif;
-    border-radius: 5px;
+.capitalize {
+    text-transform: capitalize;
+}
+
+.uppercase {
+    text-transform: uppercase;
 }
 
 
 
 
 
-/**************HEADER**************/
-
-
 /**************nav**************/
 .nav {
     background-color: var(--color-brown-dark);
 
-    width: 100vw;
+    width: 100%;
     height: 67px;
     display: flex;
 
@@ -65,11 +60,11 @@
     justify-content: space-between;
 }
 
-        @media (max-width: 768px) {
-            .nav-container {
-                display: none;
+            @media (max-width: 768px) {
+                .nav-container {
+                    display: none;
+                }
             }
-        }
 
 
 .nav-burger-container {
@@ -80,35 +75,35 @@
     display: none;
 }
 
-        @media (max-width: 768px) {
-            .nav-burger-container {
-                display: block;
+            @media (max-width: 768px) {
+                .nav-burger-container {
+                    display: block;
+                }
+
+                .nav-burger-container a:hover {
+                    transform: scale(1.1);
+                    transition: 0.7s;
+                }
+
+                .burger-menu {
+                    width: 3rem;
+                    height: 3rem;
+
+                    position: absolute;
+                    top: 10%;
+                    right: 0%;
+                }
+
+                .burger-menu-img {
+                    background-image: url(/files/icons/pngegg.png);
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    background-position: center;
+
+                    width: 100%;
+                    height: 100%;
+                }
             }
-
-            .nav-burger-container a:hover {
-                transform: scale(1.1);
-                transition: 0.7s;
-            }
-
-            .burger-menu {
-                width: 50px;
-                height: 50px;
-
-                position: absolute;
-                top: 10%;
-                right: 0%;
-            }
-
-            .burger-menu-img {
-                background-image: url(/files/icons/pngegg.png);
-                background-repeat: no-repeat;
-                background-size: cover;
-                background-position: center;
-
-                width: 100%;
-                height: 100%;
-            }
-        }
 
 .nav-container a {
     text-decoration: none;
@@ -128,6 +123,7 @@
     background-color: var(--color-brown-lighter);
     transform: scale(1.1);
     transition: 0.7s;
+    border-radius: 5px;
 }
 
 .nav-container li {
@@ -140,7 +136,7 @@
 
 /**************hero**************/
 .hero {
-    width: 100vw;
+    width: 100%;
     height: 804px;
     position: relative;
 }
@@ -163,11 +159,11 @@
     left: 25%;
 }
 
-        @media (max-width: 768px) {
-            .hero-text-container {
-                width: 65%;
+            @media (max-width: 768px) {
+                .hero-text-container {
+                    width: 65%;
+                }
             }
-        }
 
 .hero-text {   
     font-size: 64px;
@@ -179,11 +175,11 @@
     flex-wrap: wrap;
 }
 
-        @media (max-width: 500px) {
-            .hero-text {   
-                font-size: 50px;
+            @media (max-width: 500px) {
+                .hero-text {   
+                    font-size: 50px;
+                }
             }
-        }
 
 .hero-text span {
     flex-basis: calc(100% / 1);
@@ -205,13 +201,13 @@
     justify-content: space-between;
 }
 
-        @media (max-width: 768px) {
-            .about-us {
-                width: 80vw;
-                height: 70vh;
-                flex-direction: column;
+            @media (max-width: 768px) {
+                .about-us {
+                    width: 80vw;
+                    height: 70vh;
+                    flex-direction: column;
+                }
             }
-        }
 
 .about-us-text {
     flex-basis: calc(100% / 2 - 2%);
@@ -228,37 +224,37 @@
     margin-top: 5%;
 }
 
-        @media (max-width: 1365px) {
-            .about-us-text p {
-                font-size: 16px;
-                margin-top: 3%;
+            @media (max-width: 1365px) {
+                .about-us-text p {
+                    font-size: 16px;
+                    margin-top: 3%;
+                }
             }
-        }
 
-        @media (max-width: 1110px) {
-            .about-us-text p {
-                font-size: 15px;
+            @media (max-width: 1110px) {
+                .about-us-text p {
+                    font-size: 15px;
+                }
             }
-        }
 
-        @media (max-width: 980px) {
-            .about-us-text p {
-                font-size: 14px;
+            @media (max-width: 980px) {
+                .about-us-text p {
+                    font-size: 14px;
+                }
             }
-        }
 
-        @media (max-width: 870px) {
-            .about-us-text p {
-                font-size: 13px;
+            @media (max-width: 870px) {
+                .about-us-text p {
+                    font-size: 13px;
+                }
             }
-        }
 
-        @media (max-width: 768px) {
-            .about-us-text p {
-                font-size: 18px;
-                margin: 5% 0;
+            @media (max-width: 768px) {
+                .about-us-text p {
+                    font-size: 18px;
+                    margin: 5% 0;
+                }
             }
-        }
     
 
 .about-us-img-container {
@@ -273,6 +269,8 @@
     
     width: 100%;
     height: 100%;
+    
+    border-radius: 5px;
 }
 
 
@@ -281,36 +279,41 @@
 
 /**************what-we-do**************/
 .what-we-do {
-    width: 100vw;
-    height: 70vh;
+    width: 100%;
+    height: 60vh;
+
+    padding: 5vh 0;
+
+    display: flex;
+    align-items: center;
 
     background-color: var(--color-brown-dark);
 }
 
-        @media (max-width: 768px) {
-            .what-we-do {
-                height: fit-content;
+            @media (max-width: 768px) {
+                .what-we-do {
+                    height: auto;
+                }
             }
-        }
 
 .what-we-do-container {
     width: 70vw;
     height: 50vh;
-    margin: 10vh auto;
+    margin: 0 auto;
 
     color: var(--color-white);
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
-        @media (max-width: 768px) {
-            .what-we-do-container {
-                width: 80vw;
-                height: fit-content;
+            @media (max-width: 768px) {
+                .what-we-do-container {
+                    width: 80vw;
+                    height: auto;
+                }
             }
-        }
 
 .what-we-do-text {
     flex-basis: calc(100% / 3);
@@ -378,6 +381,7 @@
 
 .what-we-do-icons h3 {
     text-align: center;
+    margin-top: 5px;
 }
 
         @media (max-width: 768px) {
@@ -499,24 +503,27 @@
             }
 
 .our-trips-container:hover {
-    transform: scale(1.3);
-    transition: 1.2s;
-} 
+    transform: scale(1.05);
+    transition: 1.25s;
+}
 
 .our-trips-h2 {
     background-color: var(--color-white-darker);
     text-align: center;
+
     display: flex;
     align-items: center;
     justify-content: center;
+
+    border-radius: 5px;
 }
 
-        @media (max-width: 768px) {
-            .our-trips-h2 {
-                height: 10vh;
-                font-size: 25px;
+            @media (max-width: 768px) {
+                .our-trips-h2 {
+                    height: 10vh;
+                    font-size: 25px;
+                }
             }
-        }
 
 .our-trips-h2:hover {
     transform: scale(1);
@@ -562,6 +569,8 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    
+    border-radius: 5px;
 }
 
 
@@ -570,7 +579,7 @@
 
 /**************contacts**************/
 .contacts {
-    width: 100vw;
+    width: 100%;
     height: 30vh;
     background-color: var(--color-brown);
 }
@@ -590,7 +599,8 @@
 .contacts-container {
     width: 70vw;
     height: 25vh;
-    margin: 2.5vh auto;
+    margin: 0 auto;
+    padding: 5vh 0;
 
     display: flex;
     justify-content: space-evenly;
@@ -601,15 +611,13 @@
                 .contacts-container {
                     flex-direction: column;
                     justify-content: space-between;
-                    margin: 7vh auto;
+                    height: auto;
                 }
             }
 
             @media (max-width: 768px) {
                 .contacts-container {
                     width: 80vw;
-                    height: auto;
-                    margin: 7vh auto;
                 }
             }
 
@@ -646,7 +654,6 @@
 .contacts-content {
     flex-grow: 2;
 
-    height: 17vh;
     margin: 5px 0;
 
     display: flex;
@@ -672,7 +679,7 @@
             }
 
 .contacts-paragraphs p:nth-child(2) {
-    margin-top: 1rem;
+    margin: 1rem 0;
 }
 
 .contacts-button {
@@ -680,6 +687,7 @@
     width: 130px;
     height: 45px;
     text-align: center;
+    border-radius: 5px;
 
     font-weight: 700;
     text-decoration: none;
@@ -850,12 +858,18 @@
 
 /**************gallery**************/
 .gallery {
-    width: 100vw;
+    width: 100%;
     height: 840px;
 
     display: flex;
     flex-wrap: wrap;
 }
+
+            @media (max-width: 768px) {
+                .gallery {
+                    height: auto;
+                }
+            }
 
 .gallery-photo1 {
     background-image: url(/files/images/alexey-fedenkov-BaCZYH9RLmQ-unsplash.jpg);
@@ -901,17 +915,30 @@
                 }
             }
 
-.gallery-photo-container:hover {
-    transform: scale(1.1);
-    transition: 1.1s;
-}
 
-@media (max-width: 768px) {
-    .gallery-photo-container:hover {
-        transform: scale(1);
-        transition: 0s;
-    }
-}
+
 
 
 /**************FOOTER*************/
+.footer {
+    width: 100%;
+    height: 114px;
+
+    background-color: var(--color-grey-dark);
+    text-align: center;
+
+    padding: 25px 0;
+}
+
+.footer h3 {
+    margin-bottom: 5px;
+}
+
+.footer a {
+    color: var(--color-pink-darker);
+}
+
+.footer p {
+    color: var(--color-white);
+    font-weight: 700;
+}
