--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/**************BASICS**************/
+/**************************BASICS**************************/
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +9,7 @@
 
 
 
-/**************SHARED**************/
+/************************SHARED******************************/
 #body {
     font-family: Roboto, sans-serif;
 }
@@ -38,7 +38,7 @@
 
 
 
-/**************nav**************/
+/**************************nav***************************/
 .nav {
     background-color: var(--color-brown-dark);
 
@@ -134,7 +134,7 @@
 
 
 
-/**************hero**************/
+/****************************hero*************************/
 .hero {
     width: 100%;
     height: 804px;
@@ -190,9 +190,9 @@
 
 
 
-/**************MAIN**************/
+/******************************MAIN***************************/
 
-/**************about-us**************/
+/**************************about-us***************************/
 .about-us {
     width: 70vw;
     height: 310px;
@@ -277,7 +277,7 @@
 
 
 
-/**************what-we-do**************/
+/**************************what-we-do****************************/
 .what-we-do {
     width: 100%;
     height: 60vh;
@@ -451,7 +451,7 @@
 
 
 
-/**************our-trips**************/
+/******************************our-trips***************************/
 .our-trips {
     width: 70vw;
     margin: 10vh auto;
@@ -577,7 +577,7 @@
 
 
 
-/**************contacts**************/
+/*****************************contacts*********************************/
 .contacts {
     width: 100%;
     height: 30vh;
@@ -712,7 +712,7 @@
 
 
 
-/**************reviews**************/
+/*****************************reviews******************************/
 .reviews {
     width: 70vw;
     margin: 7vh auto;
@@ -856,7 +856,7 @@
 
 
 
-/**************gallery**************/
+/*********************************gallery***********************************/
 .gallery {
     width: 100%;
     height: 840px;
@@ -919,7 +919,7 @@
 
 
 
-/**************FOOTER*************/
+/************************************FOOTER******************************/
 .footer {
     width: 100%;
     height: 114px;
