--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@
             @media (max-width: 768px) {
                 .about-us {
                     width: 80vw;
-                    height: 70vh;
+                    height: 10vh;
                     flex-direction: column;
                 }
             }
@@ -483,14 +483,8 @@
                     height: 30vh;
                 }
             }
-            
-            @media (min-width: 1500px) {
-                .our-trips-container {
-                    height: 20vh;
-                }
-            }
 
-            @media (min-width: 1700px) {
+            @media (min-width: 1000px) {
                 .our-trips-container {
                     height: 23vh;
                 }
@@ -580,7 +574,6 @@
 /*****************************contacts*********************************/
 .contacts {
     width: 100%;
-    height: 30vh;
     background-color: var(--color-brown);
 }
 
@@ -598,7 +591,7 @@
 
 .contacts-container {
     width: 70vw;
-    height: 25vh;
+    height: 40vh;
     margin: 0 auto;
     padding: 5vh 0;
 
@@ -914,6 +907,11 @@
                     height: auto;
                 }
             }
+
+.gallery-photo-container:hover {
+    transform: scale(1.02);
+    transition: 0.7s;
+}
 
 
 
